add comment section

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,4 +20,11 @@
   <div class="container">
     <%- data %>
   </div>
+  <script src="https://utteranc.es/client.js"
+        repo="Syrup/markdownitapp"
+        issue-term="url"
+        theme="<%= darkmode ? 'github-dark' : 'github-light' %>"
+        crossorigin="anonymous"
+        async>
+    </script>
 </body>
