add routing system

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,37 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Rubik:wght@300&display=swap');
 
+:root {
+  --bg: #fff;
+  --text: #000;
+  --link: #b08a23;
+  --summary: #333;
+}
+
+.dark {
+  --bg: #121110;
+  --text: #fff;
+  --link: #8a6b16;
+  --summary: #cfcfcf;
+}
+
+:link {
+  text-decoration: none;
+  color: var(--link)
+}
+
+:link:hover {
+  text-decoration: underline;
+}
+
+:visited {
+  color: var(--link)
+}
+
+body {
+  background-color: var(--bg);
+  color: var(--text)
+}
+
 div.container {
   padding: 23px;
   font-family: "Rubik", sans-serif;
@@ -36,5 +68,55 @@ blockquote:before {
 @media screen and (max-width: 600px) {
   pre.hljs {
     width: 90%
+  
   }
+}
+
+details {
+  /*
+  width: 50%;
+  margin: 0 auto;
+  background: #282828;
+  margin-bottom: .5rem;
+  box-shadow: 0 .1rem 1rem -.5rem rgba(0,0,0,.4);
+  border-radius: 5px;
+*/
+  overflow: hidden;
+}
+
+summary {
+  padding: 1rem;
+  display: block;
+  /*color: var(--summary);*/
+  padding-left: 2.2rem;
+  position: relative;
+  cursor: pointer;
+  
+}
+
+summary:before {
+  content: '';
+  border-width: .4rem;
+  border-style: solid;
+  border-color: transparent transparent transparent var(--summary);
+  position: absolute;
+  top: 1.3rem;
+  left: 1rem;
+  transform: rotate(0);
+  transform-origin: .2rem 50%;
+  transition: .25s transform ease;
+}
+
+details[open] > summary:before {
+  transform: rotate(90deg);
+}
+
+
+details summary::-webkit-details-marker {
+  display: none;
+}
+
+details > ul {
+  padding-bottom: 1rem;
+  margin-bottom: 0;
 }
