--- a/public/style.css
+++ b/public/style.css
@@ -5,6 +5,8 @@
   --text: #000;
   --link: #b08a23;
   --summary: #333;
+
+  transition: 1.3 ease-out;
 }
 
 .dark {
@@ -12,6 +14,8 @@
   --text: #fff;
   --link: #8a6b16;
   --summary: #cfcfcf;
+
+  transition: 1.3s ease-out;
 }
 
 :link {
@@ -32,8 +36,12 @@ body {
   color: var(--text)
 }
 
+body:not(.dark) {
+  transition: 1.3s ease-out;
+}
+
 div.container {
-  padding: 23px;
+  padding: 16px;
   font-family: "Rubik", sans-serif;
   overflow-wrap: break-word;
   word-wrap: break-word;
@@ -119,4 +127,37 @@ details summary::-webkit-details-marker {
 details > ul {
   padding-bottom: 1rem;
   margin-bottom: 0;
+}
+
+.change {
+  position: relative;
+}
+
+
+.mode {
+  z-index: 1;
+  display: block;
+  cursor: pointer;
+  font-size: 20px;
+  border-radius: 50px;
+  padding: 10px;
+  border: none;
+  position: fixed;
+  right: 35px;
+  bottom: 40px;
+  background-color: #000;
+}
+
+.mode-dark {
+  display: block;
+  z-index: 1;
+  font-size: 20px;
+  cursor: pointer;
+  border-radius: 50px;
+  padding: 10px;
+  border: none;
+  position: fixed;
+  right: 35px;
+  bottom: 40px;
+  background-color: #fff
 }
