--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,11 +2,18 @@
 <head>
   <title><%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  <meta name="description" content="<%= attr.description %>">
+  <meta name="og:description" content="<%= attr.description %>">
+  <meta name="title" content="<%= title %>">
+  <meta name="theme-color" content="#513ae8">
+  <meta name="og:title" content="<%= title %>">
+  <meta name="og:image" content="<%= attr.image %>">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
   <link rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/github-dark-dimmed.min.css">
   <!-- <link rel="stylesheet" href="/style.css"> -->
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="/style.min.css">
   <!-- <style>
     div.container {
       padding: 9px;
@@ -21,6 +28,7 @@
   <div class="container">
     <%- data %>
   </div>
+  <div class="change"><button class="mode">🌑</button></div>
   <script src="https://utteranc.es/client.js"
         repo="Syrup/markdownitapp"
         issue-term="pathname"
@@ -28,5 +36,5 @@
         crossorigin="anonymous"
         async>
     </script>
-  <script src="/script.js"></script>
+  <script src="/script.min.js"></script>
 </body>
