--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
   <title><%= title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta name="description" content="<%= attr.description %>">
@@ -9,32 +11,25 @@
   <meta name="og:title" content="<%= title %>">
   <meta name="og:image" content="<%= attr.image %>">
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/github-dark-dimmed.min.css">
-  <!-- <link rel="stylesheet" href="/style.css"> -->
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/base16/<%= config.web.lightTheme %>.min.css" title="light" <%= darkmode ? 'disabled="disabled"' : "" %> >
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/<%= config.web.darkTheme %>.min.css" title="dark" <%= darkmode ? "" : 'disabled=disabled' %> >
   <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
   <link rel="stylesheet" href="/style.min.css">
-  <!-- <style>
-    div.container {
-      padding: 9px;
-    }
-    
-    pre.hljs {
-      padding: 10px;
-    }
-  </style> -->
 </head>
 <body class="<%= darkmode ? 'dark' : '' %>">
   <div class="container">
     <%- data %>
   </div>
-  <div class="change"><button class="mode">🌑</button></div>
+  <div class="change"><button class="mode"><%= darkmode ? "☀️" : "🌑" %></button></div>
   <script src="https://utteranc.es/client.js"
-        repo="Syrup/markdownitapp"
+        repo="Syrup/markdown-it-template"
         issue-term="pathname"
         theme="<%= darkmode ? 'github-dark' : 'github-light' %>"
         crossorigin="anonymous"
         async>
     </script>
-  <script src="/script.min.js"></script>
+  <script src="/script.min.js">
+  </script>
+  <script>hljs.initHighlightingOnLoad();</script>
 </body>
+</html>
