--- a/public/style.css
+++ b/public/style.css
@@ -51,6 +51,34 @@ pre.hljs {
   position: relative;
 }
 
+pre.hljs code {
+  display: block;
+  position: relative;
+}
+
+.code-lang {
+  position: sticky !important;
+  top: 0 !important;
+  left: 0 !important;
+  float: left !important;
+  background-color: transparent !important;
+  color: #888 !important;
+  padding: 2px 6px !important;
+  font-size: 9px !important;
+  font-family: 'Courier New', monospace !important;
+  font-weight: 600 !important;
+  line-height: 1 !important;
+  text-transform: none !important;
+  border-top-left-radius: 2px !important;
+  border-bottom-right-radius: 3px !important;
+  user-select: none !important;
+  pointer-events: none !important;
+  margin: 0 !important;
+  margin-bottom: -14px !important;
+  display: inline-block !important;
+  z-index: 1 !important;
+}
+
 .code-wrapper {
   position: relative;
   display: inline-block;
@@ -262,6 +290,11 @@ blockquote.alert[data-pico-color="red"] .alert-icon svg {
 
 blockquote.alert p:last-child {
   margin-bottom: 0;
+}
+
+:root.dark .code-lang {
+  background-color: transparent !important;
+  color: #666 !important;
 }
 
 @media screen and (max-width: 600px) {
